Agregando caracteristicas Se agregaron pequeñas caracteristicas para el mejor funcionamiento del sitio -Pie de página -Mayor cantidad de entradas para poder visualizar el desplazamiento -Enlaces para ajustar los estilos mas adelante

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     </head>
     <body>
         <header>
-            <h1>0and6</h1>
+            <h1><a href="#">0and6</a></h1>
         </header>
         <section id="entradas">
 
             <article class="resumen">
                 <header class="cabecera">
-                    <h2>Trabajando como operador en queretaro</h2>
+                    <h2><a href="/posts/23-12-2020/trabajando-como-operador-en-queretaro.html">Trabajando como operador en queretaro</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
@@ -21,19 +23,94 @@
                 </div>
             </article>
         
-
+            
             <article class="resumen">
                 <header class="cabecera">
-                    <h2>Hola mundo</h2>
+                    <h2><a href="/posts/23-12-2020/hola-mundo.html">Hola mundo</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Este es un resumen de la primer entrada de este blog, con el tiempo
                     se pueden tener una mayor cantidad de entradas conforme tenga mas ideas...</p>
                 </div>
             </article>
+
+            <article class="resumen">
+                <header class="cabecera">
+                    <h2><a href="#">Trabajando como operador en queretaro</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                </header>
+                <div class="contenido">
+                    <p>Durante mi salida de la carrera quisé probar suerte en el estado
+                        Queretaro a ver cuales eran las formas de encontrar trabajo...</p>
+                </div>
+            </article>
+
+            <article class="resumen">
+                <header class="cabecera">
+                    <h2><a href="#">Trabajando como operador en queretaro</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                </header>
+                <div class="contenido">
+                    <p>Durante mi salida de la carrera quisé probar suerte en el estado
+                        Queretaro a ver cuales eran las formas de encontrar trabajo...</p>
+                </div>
+            </article>
+
+
+            <article class="resumen">
+                <header class="cabecera">
+                    <h2><a href="#">Trabajando como operador en queretaro</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                </header>
+                <div class="contenido">
+                    <p>Durante mi salida de la carrera quisé probar suerte en el estado
+                        Queretaro a ver cuales eran las formas de encontrar trabajo...</p>
+                </div>
+            </article>
+
+            <article class="resumen">
+                <header class="cabecera">
+                    <h2><a href="#">Trabajando como operador en queretaro</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                </header>
+                <div class="contenido">
+                    <p>Durante mi salida de la carrera quisé probar suerte en el estado
+                        Queretaro a ver cuales eran las formas de encontrar trabajo...</p>
+                </div>
+            </article>
+
+            <article class="resumen">
+                <header class="cabecera">
+                    <h2><a href="#">Trabajando como operador en queretaro</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                </header>
+                <div class="contenido">
+                    <p>Durante mi salida de la carrera quisé probar suerte en el estado
+                        Queretaro a ver cuales eran las formas de encontrar trabajo...</p>
+                </div>
+            </article>
+
+            <article class="resumen">
+                <header class="cabecera">
+                    <h2><a href="#">Trabajando como operador en queretaro</a></h2>
+                    <hr>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                </header>
+                <div class="contenido">
+                    <p>Durante mi salida de la carrera quisé probar suerte en el estado
+                        Queretaro a ver cuales eran las formas de encontrar trabajo...</p>
+                </div>
+            </article>
         </section>
         <footer>
-            0and6.xyz
+            <span>2020 0and6.xyz</span>
         </footer>
         <link rel="stylesheet" href="estilos.css">
     </body>
