Agregar clases a enlaces Agregamos las clases autor y categorias

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <header class="cabecera">
                     <h2><a href="/posts/23-12-2020/trabajando-como-operador-en-queretaro.html">Trabajando como operador en queretaro</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
@@ -28,7 +28,7 @@
                 <header class="cabecera">
                     <h2><a href="/posts/23-12-2020/hola-mundo.html">Hola mundo</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#" class="categorias">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Este es un resumen de la primer entrada de este blog, con el tiempo
@@ -40,7 +40,7 @@
                 <header class="cabecera">
                     <h2><a href="#">Trabajando como operador en queretaro</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
@@ -52,7 +52,7 @@
                 <header class="cabecera">
                     <h2><a href="#">Trabajando como operador en queretaro</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
@@ -65,7 +65,7 @@
                 <header class="cabecera">
                     <h2><a href="#">Trabajando como operador en queretaro</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
@@ -77,7 +77,7 @@
                 <header class="cabecera">
                     <h2><a href="#">Trabajando como operador en queretaro</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
@@ -89,7 +89,7 @@
                 <header class="cabecera">
                     <h2><a href="#">Trabajando como operador en queretaro</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
