--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <header class="cabecera">
                     <h2><a href="/posts/23-12-2020/trabajando-como-operador-en-queretaro.html">Trabajando como operador en queretaro</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#" class="categorias">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
