--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <article class="resumen">
                 <header class="cabecera">
-                    <h2><a href="/posts/23-12-2020/trabajando-como-operador-en-queretaro.html">Trabajando como operador en queretaro</a></h2>
+                    <h2><a href="/blog/posts/23-12-2020/trabajando-como-operador-en-queretaro.html">Trabajando como operador en queretaro</a></h2>
                     <hr>
                     <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#" class="categorias">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
@@ -26,9 +26,9 @@
             
             <article class="resumen">
                 <header class="cabecera">
-                    <h2><a href="/posts/23-12-2020/hola-mundo.html">Hola mundo</a></h2>
+                    <h2><a href="/blog/posts/23-12-2020/hola-mundo.html">Hola mundo</a></h2>
                     <hr>
-                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#" class="categorias">Experiencias profesionales</a>, <a href="#">migración</a>, <a href="#" class="categorias">personal</a>.</div>
+                    <div>Publicado el 23 de diciembre de 2020 por <a href="#" class="autor">Armando Martinez</a>. <a href="#" class="categorias">Experiencias profesionales</a>, <a href="#" class="categorias">migración</a>, <a href="#" class="categorias">personal</a>.</div>
                 </header>
                 <div class="contenido">
                     <p>Este es un resumen de la primer entrada de este blog, con el tiempo
@@ -105,7 +105,11 @@
                 </header>
                 <div class="contenido">
                     <p>Durante mi salida de la carrera quisé probar suerte en el estado
-                        Queretaro a ver cuales eran las formas de encontrar trabajo...</p>
+                        Queretaro a ver cuales eran las formas de encontrar trabajo; ya habia cursado mas o menos
+                        completa mi carrera lo único que faltaba para culminar erá realizar mis prácticas profesionales,
+                        por lo cual decidí aventurarme al estado de Queretaro.
+                    </p>
+                    <p></p>
                 </div>
             </article>
         </section>
